# reference_book_fast_api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/docker/web/: Dockerfile
apps/web/: .env.example  alembic.ini  start.sh
apps/web/alembic/: env.py
apps/web/alembic/versions/: 2025_01_24_0332-a17281cabc1b_таблицы_пользователя_организации_.py  2025_01_24_1618-8be7d9cf7269_таблицы_активностей_и_некоторые_индексы_.py
apps/web/src/: __init__.py  main.py  uvicorn_worker.py
apps/web/src/activity/: admin.py  models.py  schemas.py
apps/web/src/associations/: associations_models.py
apps/web/src/auth/: admin_auth.py  user_auth.py
apps/web/src/base/: settings.py
apps/web/src/base/base_models/: db_models.py
apps/web/src/base/db_settings/: db_helper.py  session.py
apps/web/src/building/: admin.py  api.py  models.py  repository.py  schemas.py  service.py
apps/web/src/exceptions/: exceptions.py
apps/web/src/organization/: admin.py  api.py  models.py  repository.py  schemas.py  service.py  utils.py
apps/web/src/telephone/: admin.py  models.py  schemas.py
apps/web/src/user/: admin.py  api.py  models.py  repository.py  schemas.py  service.py
